# de-zoomcamp

./: .gitignore  README.md  pyproject.toml
week1/01_01_introduction_to_docker/: dockerfile  pipeline.py
week1/01_02_ingest_ny_taxi_data_postgres/: docker-compose-airflow.yaml.back  docker-compose.yaml  upload-data.ipynb
week1/01_03_connect_pgadmin_postgres/: pgsql-pgadmin-setup.sh
week1/01_04_put_ingest_script_docker/: dockerfile  run.sh
week1/01_05_run_postgres_pgadmin_docker_compose/: docker-compose.yaml
week1/01_06_sql_refresher/: EDA.sql
week1/01_11_terraform_basics_simple_one_file_deploy/: main.tf
week1/homework/: docker-compose.yaml  hw.sql  upload-data.ipynb
